--- a/linkSQLLogin/LinkDatabaseApplication/app/src/main/AndroidManifest.xml
+++ b/linkSQLLogin/LinkDatabaseApplication/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/lago"
+        android:icon="@mipmap/logo003"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
